--- a/main.html
+++ b/main.html
@@ -12,26 +12,21 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="modal modal-dialog modal-dialog-centered" id="accio-modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">New Modal</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-nec odio. Present libero. Sed cursus ante dapibus diam. Sed
-nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis
-ipsum. Praesent mauris. Fusce nec tellus sed augue semper
-porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" id="open-modal" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        
-      </div>
-    </div>
-  </div>
-</div>
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title">New Modal</h5>
+	        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+	      </div>
+	      <div class="modal-body">
+	        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Present libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
