--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Present libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary" id="open-modal" data-bs-dismiss="modal" >Close</button>
 	      </div>
 	    </div>
 	  </div>
