--- a/main.html
+++ b/main.html
@@ -11,19 +11,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#accio-modal">Launch newton modal</button>
+	<button id="open-modal" class="btn btn-primary" id="newton-modal" data-bs-toggle="modal" data-bs-target="#accio-modal">Launch newton modal</button>
 	<div class="modal modal-dialog modal-dialog-centered" id="newton-modal" tabindex="-1">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <h5 class="modal-title">New Modal</h5>
-	        <button type="button" class="btn-close" data-bs-dismiss="modal" data-bs-toggle="modal" aria-label="Close"></button>
+	        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 	      </div>
 	      <div class="modal-body">
 	        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Present libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-primary" id="open-modal"  data-bs-dismiss="modal" >Close</button>
+	        <button type="button" class="btn btn-primary" id="open-modal"  data-bs-dismiss="modal">Close</button>
 	      </div>
 	    </div>
 	  </div>
